# grbl_proxy

./: .gitignore  README.md  StateDiagram.md  config.yaml.example  grbl-proxy-architecture.md  install.sh  pyproject.toml
.claude/: settings.local.json
src/grbl_proxy/: config.py  grbl_protocol.py  job_buffer.py  main.py  proxy_core.py  serial_conn.py  streamer.py  tcp_server.py
src/grbl_proxy/web/: app.py  console_log.py  routes.py  status.py
src/grbl_proxy/web/static/: app.js  index.html  style.css
systemd/: grbl-proxy.service
tests/: mock_grbl.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_serial_conn.py
